--- a/tests/qunit/templates/simple-map-test.html
+++ b/tests/qunit/templates/simple-map-test.html
@@ -3,8 +3,8 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.12.0.css">
 	<title>Tests for Simple Map</title>
-	<script type='text/javascript' src='http://wp.dev/wp-includes/js/jquery/jquery.js?ver=1.11.3'></script>
 	<style>
 		.simplemap img
 		{
@@ -34,11 +34,15 @@
 
 <body>
 	<h1>Tests for simple-map.js</h1>
+		<div id="qunit"></div>
+		<div id="qunit-fixture"></div>
 
 __SHORTCODES__
 
-	<script type='text/javascript' src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
-	<script type='text/javascript' src='https://maps.google.com/maps/api/js?sensor=false'></script>
+	<script type='text/javascript' src='http://maps.google.com/maps/api/js?sensor=false'></script>
+	<script type='text/javascript' src='http://code.jquery.com/jquery-2.1.4.min.js'></script>
 	<script type='text/javascript' src='../../js/simple-map.min.js'></script>
+	<script type='text/javascript' src='http://code.jquery.com/qunit/qunit-1.12.0.js'></script>
+    <script src='tests.js'></script>
 </body>
 </html>
