--- a/tests/qunit/templates/simple-map-test.html
+++ b/tests/qunit/templates/simple-map-test.html
@@ -43,7 +43,7 @@ __SHORTCODES__
 	<div id="modal-map" style="display: none;">[map addr="Osaka, Japan"]</div>
 	<div><a href="javascript:void(0);" onclick="$('#modal-map').show(); return false;">Show Map</div>
 
-	<script type='text/javascript' src='http://maps.google.com/maps/api/js?sensor=false'></script>
+	<script type='text/javascript' src='http://maps.google.com/maps/api/js'></script>
 	<script type='text/javascript' src='http://code.jquery.com/jquery-2.1.4.min.js'></script>
 	<script type='text/javascript' src='../../js/simple-map.min.js'></script>
 	<script type='text/javascript' src='http://code.jquery.com/qunit/qunit-1.12.0.js'></script>
